add vector benchmark to test gui